fir_prj/solution1/.autopilot/db/clang.err.log
fir.c:50:8: error: conflicting types for 'readInputFile'
float* readInputFile(char* filepath, int nBValues){
       ^
fir.c:48:6: note: previous declaration is here
void readInputFile(char* filepath);
     ^
fir.c:51:2: error: use of undeclared identifier 'FILE'
 FILE *fin;
 ^
fir.c:51:8: error: use of undeclared identifier 'fin'; did you mean 'fir'?
 FILE *fin;
       ^~~
       fir
./fir.h:54:6: note: 'fir' declared here
void fir (
     ^
fir.c:53:2: error: use of undeclared identifier 'fin'
 fin = fopen(filepath, "r");
 ^
fir.c:53:8: warning: implicit declaration of function 'fopen' is invalid in C99 [-Wimplicit-function-declaration]
 fin = fopen(filepath, "r");
       ^
fir.c:56:3: warning: implicit declaration of function 'fscanf' is invalid in C99 [-Wimplicit-function-declaration]
  fscanf(fin, "%f", table[i]);
  ^
fir.c:56:3: warning: declaration of built-in function 'fscanf' requires inclusion of the header <stdio.h> [-Wbuiltin-requires-header]
fir.c:56:10: error: use of undeclared identifier 'fin'; did you mean 'fir'?
  fscanf(fin, "%f", table[i]);
         ^~~
         fir
./fir.h:54:6: note: 'fir' declared here
void fir (
     ^
fir.c:56:21: warning: format specifies type 'float *' but the argument has type 'double' [-Wformat]
  fscanf(fin, "%f", table[i]);
               ~~   ^~~~~~~~
fir.c:58:2: warning: implicit declaration of function 'fclosef' is invalid in C99 [-Wimplicit-function-declaration]
 fclosef(fin);
 ^
fir.c:58:10: error: use of undeclared identifier 'fin'; did you mean 'fir'?
 fclosef(fin);
         ^~~
         fir
./fir.h:54:6: note: 'fir' declared here
void fir (
     ^
fir.c:60:9: warning: address of stack memory associated with local variable 'table' returned [-Wreturn-stack-address]
 return table;
        ^~~~~
fir.c:67:32: error: too many arguments to function call, expected single argument 'filepath', have 2 arguments
 y_n = readInputFile("yn.txt", nbOfValues);
       ~~~~~~~~~~~~~           ^~~~~~~~~~
fir.c:48:1: note: 'readInputFile' declared here
void readInputFile(char* filepath);
^
6 warnings and 7 errors generated.
